--- a/view/journal_form.xml
+++ b/view/journal_form.xml
@@ -4,9 +4,7 @@ The COPYRIGHT file at the top level of this repository contains the full
 copyright notices and license terms. -->
 <data>
     <xpath expr="/form/notebook/page[@id='general']" position="after">
-        <page string="Sequences"
-            states="{'invisible': Not(In(Eval('type'), ['revenue', 'expense']))}"
-            id="sequences">
+        <page string="Sequences" id="sequences">
             <field name="sequences" colspan="4"/>
         </page>
     </xpath>
